--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Título -->
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -16,11 +15,12 @@
         android:text="Registrarte"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Subtítulo -->
+        android:textColor="#1877F2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvSubtitle"
         android:layout_width="wrap_content"
@@ -28,11 +28,11 @@
         android:layout_marginTop="8dp"
         android:text="Es rápido y fácil."
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+        android:textColor="#1877F2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    <!-- Campo Nombre -->
     <EditText
         android:id="@+id/etFirstName"
         android:layout_width="0dp"
@@ -42,11 +42,11 @@
         android:layout_marginEnd="8dp"
         android:hint="Nombre"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@id/etLastName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
+        android:textColorHint="#8B8F9E"
+    app:layout_constraintEnd_toStartOf="@id/etLastName"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
 
-    <!-- Campo Apellido -->
     <EditText
         android:id="@+id/etLastName"
         android:layout_width="0dp"
@@ -56,11 +56,11 @@
         android:layout_marginEnd="16dp"
         android:hint="Apellido"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/etFirstName"
-        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
+        android:textColorHint="#8B8F9E"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/etFirstName"
+    app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
 
-    <!-- Campo Número o Email -->
     <EditText
         android:id="@+id/etPhoneEmail"
         android:layout_width="0dp"
@@ -70,11 +70,11 @@
         android:layout_marginEnd="16dp"
         android:hint="Número de celular o correo electrónico"
         android:inputType="textEmailAddress|phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etLastName" />
+        android:textColorHint="#8B8F9E"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/etLastName" />
 
-    <!-- Campo Contraseña -->
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="0dp"
@@ -84,11 +84,11 @@
         android:layout_marginEnd="16dp"
         android:hint="Contraseña nueva"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etPhoneEmail" />
+        android:textColorHint="#8B8F9E"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/etPhoneEmail" />
 
-    <!-- Fecha de nacimiento -->
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
@@ -101,21 +101,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etPassword">
 
-        <!-- Spinner de Días -->
-        <!-- Ancho mínimo recomendado -->
-
-        <!-- Spinner de Meses -->
-        <!-- Ancho mínimo recomendado -->
-
-        <!-- Spinner de Años -->
-        <!-- Ancho mínimo recomendado -->
     </LinearLayout>
-
-    <!-- Texto de Género -->
-
-    <!-- RadioGroup de Género -->
-
-    <!-- Botón de Registro -->
 
     <TextView
         android:id="@+id/tvGender"
@@ -126,8 +112,9 @@
         android:text="Género"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
+        android:textColor="#1877F2"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/linearLayout" />
 
     <TextView
         android:id="@+id/tvGender2"
@@ -138,8 +125,9 @@
         android:text="Fecha de Nacimiento"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
+        android:textColor="#1877F2"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/linearLayout" />
 
     <RadioGroup
         android:id="@+id/rgGender"
@@ -183,13 +171,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="172dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="Registrarte"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rgGender" />
+        android:backgroundTint="#1877F2"
+    android:text="Registrarte"
+    android:textColor="@android:color/white"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/rgGender" />
 
     <Spinner
         android:id="@+id/spinnerMonth"
@@ -248,12 +236,12 @@
         android:autoLink="web"
         android:linksClickable="true"
         android:text="Es posible que las personas que usan nuestro servicio hayan subido tu información de contacto a Facebook. Más información."
-        android:textColorLink="#022178"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rgGender" />
+        android:textColor="#1877F2"
+    app:layout_constraintBottom_toTopOf="@+id/textView3"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/rgGender" />
 
     <TextView
         android:id="@+id/textView3"
@@ -263,13 +251,11 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="26dp"
-        android:text="Al hacer clic en &quot;Registrarte&quot;, aceptas nuestras Condiciones, la Política de privacidad y la Política de cookies. Es posible que te enviemos notificaciones por SMS, que puedes desactivar cuando quieras."
-    android:textColorLink="#022178"
+        android:text="Al hacer clic en &quot;Registrarte&quot;, aceptas nuestras Condiciones, la Política de privacidad y la Política de cookies. Es posible que te enviemos notificaciones por SMS, que puedes desactivar cuando quieras."
+        android:textColor="#1877F2"
     app:layout_constraintBottom_toTopOf="@+id/btnRegister"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
